--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
     <header class="cabecalho" id="nome">
-        <h1>Scrobblers</h1>
+        <h1>AgroWeb</h1>
         <a href="#equipe">Sobre nós</a>
         <p>Sugestões</p>
     </header>
@@ -24,11 +24,9 @@
 
     <div>
         <section class="apresentacao" id="inicio">
-            <h3>Bem-vindo ao Scrobblers, o seu site para descobrir os significados por trás das suas músicas e álbuns
-                favoritos.
-                Seja você um entusiasta da música, um aficionado por letras ou simplesmente alguém em busca de uma
-                conexão mais profunda com suas faixas favoritas, o Scrobblers está aqui para enriquecer sua experiência
-                musical.</h3>
+            <h3>Bem-vindo ao AgroWeb! Seu site que apresenta assuntos, notícias e curiosidades sobre o mundo da
+                agronomia no brasil! Venha conosco nessa matéria sobre alguns dos principais produtos produzidos no
+                nosso país.</h3>
             <img class="apresentacao-imagemI"
                 src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS4ViA1XbEFu4Fd8OfygH6u_IdXJSRebhtAHmanqSafG_tNa4IuZyxAHgRs7JFj2BxHrZ0&usqp=CAU"
                 alt="gatinho escutando musica">
