--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
     <div>
         <section class="apresentacao" id="inicio">
             <h3>Bem-vindo ao AgroWeb! Seu site que apresenta assuntos, notícias e curiosidades sobre o mundo da
-                agronomia no brasil! Venha conosco nessa matéria sobre alguns dos principais produtos produzidos no
+                agronomia no brasil! 
+                Venha conosco nessa matéria sobre alguns dos principais produtos produzidos no
                 nosso país.</h3>
             <img class="apresentacao-imagemI"
                 src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS4ViA1XbEFu4Fd8OfygH6u_IdXJSRebhtAHmanqSafG_tNa4IuZyxAHgRs7JFj2BxHrZ0&usqp=CAU"
