--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
         </section>
     </div>
 
-    <section class="album" id="textos">
-        <div class="lana">
+    <section class="produtos" id="textos">
+        <div class="cafe">
             <h3> Did you know that there´s a tunnel under Ocean Blvd</h3>
             <br>
             <p>O álbum Did You Know That There's a Tunnel Under Ocean Blvd da cantora Lana Del Rey, trás uma imensa
@@ -47,12 +47,12 @@
                 sob a Ocean Boulevard.
             </p>
         </div>
-        <img class="album-lana"
+        <img class="cafe"
             src="https://upload.wikimedia.org/wikipedia/pt/d/db/Did_You_Know_That_There%27s_a_Tunnel_Under_Ocean_Blvd.jpg"
             alt="album lana">
 
     </section>
-    <section class="album" id="textos1">
+    <section class="produtos" id="textos1">
         <img class="album1-ye" src="https://m.media-amazon.com/images/I/81WtBMyGKqL._UF1000,1000_QL80_.jpg"
             alt="album ye">
         <div class="ye">
@@ -66,7 +66,7 @@
         </div>
     </section>
 
-    <section class="album" id="textos2">
+    <section class="produtos" id="textos2">
         <div class="crybaby">
             <h3> CryBaby</h3>
             <br>
@@ -81,7 +81,7 @@
             alt="album CryBaby">
     </section>
 
-    <section class="album" id="textos3">
+    <section class="produtos" id="textos3">
         <div class="racionais">
             <h3> Nada como um dia após o outro dia</h3>
             <br>
@@ -97,7 +97,7 @@
             alt="album Racionais">
     </section>
 
-    <section class="album" id="textos4">
+    <section class="produtos" id="textos4">
         <div class="cbj">
             <h3> Abalando Sua Fábrica</h3>
             <br>
@@ -111,7 +111,7 @@
             alt="album cbj">
     </section>
 
-    <section class="album" id="textos5">
+    <section class="produtos" id="textos5">
         <div class="tdsotm">
             <h3> The dark side of the moon </h3>
             <br>
