--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
 
     <section class="cana" id="textos2">
         <div class="imagem da cana" src="https://cptstatic.s3.amazonaws.com/imagens/enviadas/materias/materia29421/cana-de-acucar-cpt.jpg"
+        alt="album-crybaby"
             <h3> CryBaby</h3>
             <br>
             <p>O álbum Crybaby lançado pelo Lil Peep em 2017, trata de estar dividido entre as emoções do amor e da
