--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 a juventude contemporânea
             </p>
         </div>
-        <img class="album-crybaby"
+        <img class="album-crybaby" src="https://cptstatic.s3.amazonaws.com/imagens/enviadas/materias/materia29421/cana-de-acucar-cpt.jpg"
             alt="album CryBaby">
     </section>
 
