--- a/index.html
+++ b/index.html
@@ -41,10 +41,9 @@
         <div class="cafe">
             <h3> Did you know that there´s a tunnel under Ocean Blvd</h3>
             <br>
-            <p>O álbum Did You Know That There's a Tunnel Under Ocean Blvd da cantora Lana Del Rey, trás uma imensa
-                crítica a rapidez industrial.
-                Também aborda sobre como podemos ser esquecido, e que não devíamos ser esquecidos como o Túnel que passa
-                sob a Ocean Boulevard.
+            <p>
+                ChatGPT
+                O café é uma parte essencial da cultura e da economia do Brasil. Desde os primeiros dias da colonização, quando as primeiras mudas foram trazidas da Guiana Francesa em 1727, o café encontrou solo fértil nas terras brasileiras e rapidamente se tornou uma das commodities mais importantes do país.
             </p>
         </div>
         <img class="cafe"
