--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
             <p>
                 O café é uma parte essencial da cultura e da economia do Brasil. Desde os primeiros dias da colonização, quando as primeiras mudas foram trazidas da Guiana Francesa em 1727, o café encontrou solo fértil nas terras brasileiras e rapidamente se tornou uma das commodities mais importantes do país.
             </p>
+            <p>Atualmente, o Brasil é o maior produtor e exportador mundial de café, responsável por cerca de um terço da produção global. Os estados de Minas Gerais, São Paulo, Espírito Santo e Bahia são os principais produtores, cada um contribuindo com características únicas aos grãos que produzem.</p>
         </div>
         <img class="cafe"
             src="https://st3.depositphotos.com/3566499/33564/i/450/depositphotos_335646854-stock-photo-coffee-farmer-picking-ripe-robusta.jpg"
