--- a/index.html
+++ b/index.html
@@ -42,9 +42,12 @@
             <h3> Did you know that there´s a tunnel under Ocean Blvd</h3>
             <br>
             <p>
-                O café é uma parte essencial da cultura e da economia do Brasil. Desde os primeiros dias da colonização, quando as primeiras mudas foram trazidas da Guiana Francesa em 1727, o café encontrou solo fértil nas terras brasileiras e rapidamente se tornou uma das commodities mais importantes do país.
+                    O café é uma parte essencial da cultura e da economia do Brasil. Desde os primeiros dias da colonização, quando as primeiras mudas foram trazidas da Guiana Francesa em 1727, o café encontrou solo fértil nas terras brasileiras e rapidamente se tornou uma das commodities mais importantes do país.
             </p>
-            <p>Atualmente, o Brasil é o maior produtor e exportador mundial de café, responsável por cerca de um terço da produção global. Os estados de Minas Gerais, São Paulo, Espírito Santo e Bahia são os principais produtores, cada um contribuindo com características únicas aos grãos que produzem.</p>
+            <p> Atualmente, o Brasil é o maior produtor e exportador mundial de café, responsável por cerca de um terço da produção global. Os estados de Minas Gerais, São Paulo, Espírito Santo e Bahia são os principais produtores, cada um contribuindo com características únicas aos grãos que produzem.</p>
+            <p> O café não é apenas uma cultura agrícola, mas um símbolo de hospitalidade e encontro social. No Brasil, a pausa para o café é um momento sagrado, seja em casa, no trabalho ou nos famosos cafés de esquina. O famoso "cafezinho" é uma parte fundamental da rotina diária de milhões de brasileiros, e a forma de prepará-lo varia de região para região, com métodos que vão desde o coador de pano até sofisticadas máquinas de espresso.
+                <p> Além de seu impacto cultural, o café desempenha um papel crucial na economia brasileira, gerando empregos diretos e indiretos e impulsionando o desenvolvimento de infraestrutura nas regiões produtoras. A safra de café é um momento de grande expectativa e celebração, marcado pela colheita dos grãos maduros e pela preparação para a exportação para mercados ao redor do mundo.</p>
+            </p>
         </div>
         <img class="cafe"
             src="https://st3.depositphotos.com/3566499/33564/i/450/depositphotos_335646854-stock-photo-coffee-farmer-picking-ripe-robusta.jpg"
