--- a/index.html
+++ b/index.html
@@ -60,23 +60,22 @@
         <div class="ye">
             <h3>Soja</h3>
             <br>
-            <p>A soja desempenha um papel crucial na economia brasileira, contribuindo significativamente para as exportações totais do país. A diversificação das cadeias produtivas relacionadas à soja, como a produção de biocombustíveis e alimentos processados, também tem sido uma estratégia importante para agregar valor aos produtos agrícolas brasileiros, fortalecendo a posição do Brasil como um player global no mercado de commodities agrícolas.
+            <p> A soja desempenha um papel crucial na economia brasileira, contribuindo significativamente para as exportações totais do país. A diversificação das cadeias produtivas relacionadas à soja, como a produção de biocombustíveis e alimentos processados, também tem sido uma estratégia importante para agregar valor aos produtos agrícolas brasileiros, fortalecendo a posição do Brasil como um player global no mercado de commodities agrícolas.
             </p>
             <p>  Ela ocupa uma posição de destaque na agricultura brasileira, representando não apenas uma importante fonte de receita para o país, mas também um componente fundamental na segurança alimentar global. O Brasil se estabeleceu como um dos maiores produtores e exportadores mundiais de soja, com vastas extensões de terras dedicadas ao cultivo desse grão. Estados como Mato Grosso, Paraná e Rio Grande do Sul lideram a produção nacional, aproveitando as condições climáticas favoráveis e a tecnologia agrícola avançada para alcançar altos rendimentos por hectare.</p>
-            <p>O crescimento do cultivo de soja no Brasil tem sido impulsionado pela demanda internacional, especialmente da China, que é o maior importador mundial desse produto. A expansão contínua da fronteira agrícola para áreas anteriormente cobertas por vegetação nativa, como a Amazônia e o Cerrado, levantou preocupações ambientais e questões relacionadas à sustentabilidade. Esforços estão sendo feitos para equilibrar o aumento da produção com práticas agrícolas responsáveis, como o uso de técnicas de manejo sustentável e a adoção de sistemas de certificação ambiental.</p>
+            <p> O crescimento do cultivo de soja no Brasil tem sido impulsionado pela demanda internacional, especialmente da China, que é o maior importador mundial desse produto. A expansão contínua da fronteira agrícola para áreas anteriormente cobertas por vegetação nativa, como a Amazônia e o Cerrado, levantou preocupações ambientais e questões relacionadas à sustentabilidade. Esforços estão sendo feitos para equilibrar o aumento da produção com práticas agrícolas responsáveis, como o uso de técnicas de manejo sustentável e a adoção de sistemas de certificação ambiental.</p>
         </div>
     </section>
 
     <section class="cana" id="textos2">
         <div class="imagem da cana" src="https://cptstatic.s3.amazonaws.com/imagens/enviadas/materias/materia29421/cana-de-acucar-cpt.jpg"
         alt="album-crybaby"
-            <h3> CryBaby</h3>
+            <h3> Cana</h3>
             <br>
-            <p>O álbum Crybaby lançado pelo Lil Peep em 2017, trata de estar dividido entre as emoções do amor e da
-                solidão, e a dor que advém de tentar e não conseguir ter uma relação de sucesso.
-                Ele também trás a reflexão sobre a solidão que muitas vezes acompanham os relacionamentos modernos e
-                a juventude contemporânea
+            <p> A cana-de-açúcar é uma cultura de importância histórica e econômica significativa para o Brasil. Introduzida no país durante o período colonial, a cana logo se tornou uma das principais culturas agrícolas, impulsionando a economia através da produção de açúcar, etanol e outros subprodutos. Atualmente, o Brasil é o maior produtor mundial de cana-de-açúcar, com São Paulo liderando como o principal estado produtor, seguido por Minas Gerais, Goiás e outros estados do Nordeste.
             </p>
+            <p> A expansão da produção de cana-de-açúcar no Brasil foi impulsionada principalmente pelo mercado global de biocombustíveis e pela crescente demanda por etanol como uma alternativa mais sustentável aos combustíveis fósseis. O país se destacou internacionalmente como um dos principais produtores de etanol de cana-de-açúcar, utilizando tecnologias avançadas para aumentar a eficiência e reduzir os impactos ambientais da produção.</p>
+            <p> No entanto, a indústria da cana-de-açúcar no Brasil enfrenta desafios significativos, incluindo questões ambientais relacionadas ao desmatamento e à conversão de terras, bem como preocupações com o trabalho e condições de trabalho nas plantações. Esforços estão em andamento para promover práticas agrícolas sustentáveis, como o cultivo da cana sem queima prévia da palha, visando reduzir as emissões de carbono e proteger ecossistemas frágeis.</p>
         </div>
         <img class="album-crybaby" src="https://cptstatic.s3.amazonaws.com/imagens/enviadas/materias/materia29421/cana-de-acucar-cpt.jpg"
             alt="album CryBaby">
