--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
     </section>
 
     <section class="cana" id="textos2">
-        <div class="imagem da cana">
-          <img  src="https://cptstatic.s3.amazonaws.com/imagens/enviadas/materias/materia29421/cana-de-acucar-cpt.jpg"
-            alt="album-crybaby" >
+        <div class="imagem da-cana">
+            <img src="https://cptstatic.s3.amazonaws.com/imagens/enviadas/materias/materia29421/cana-de-acucar-cpt.jpg"
+                alt="album-crybaby">
             <h3> Cana</h3>
             <p> A cana-de-açúcar é uma cultura de importância histórica e econômica significativa para o Brasil.
                 Introduzida no país durante o período colonial, a cana logo se tornou uma das principais culturas
