--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     </section>
 
     <section class="cana" id="textos2">
-        <div class="imagem da-cana">
+        <div class="imagem-da-cana">
             <img src="https://cptstatic.s3.amazonaws.com/imagens/enviadas/materias/materia29421/cana-de-acucar-cpt.jpg"
                 alt="album-crybaby">
             <h3> Cana</h3>
