--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 extensões de terras dedicadas ao cultivo desse grão. Estados como Mato Grosso, Paraná e Rio Grande do
                 Sul lideram a produção nacional, aproveitando as condições climáticas favoráveis e a tecnologia agrícola
                 avançada para alcançar altos rendimentos por hectare.</p>
-            <p> O crescimento do cultivo de soja no Brasil tem sido impulsionado pela demanda internacional,
+            < <p> O crescimento do cultivo de soja no Brasil tem sido impulsionado pela demanda internacional,
                 especialmente da China, que é o maior importador mundial desse produto. A expansão contínua da fronteira
                 agrícola para áreas anteriormente cobertas por vegetação nativa, como a Amazônia e o Cerrado, levantou
                 preocupações ambientais e questões relacionadas à sustentabilidade. Esforços estão sendo feitos para
@@ -98,11 +98,13 @@
                 agrícolas, impulsionando a economia através da produção de açúcar, etanol e outros subprodutos.
                 Atualmente, o Brasil é o maior produtor mundial de cana-de-açúcar, com São Paulo liderando como o
                 principal estado produtor, seguido por Minas Gerais, Goiás e outros estados do Nordeste.</p>
+            <br>
             <p> A expansão da produção de cana-de-açúcar no Brasil foi impulsionada principalmente pelo mercado global
                 de biocombustíveis e pela crescente demanda por etanol como uma alternativa mais sustentável aos
                 combustíveis fósseis. O país se destacou internacionalmente como um dos principais produtores de etanol
                 de cana-de-açúcar, utilizando tecnologias avançadas para aumentar a eficiência e reduzir os impactos
                 ambientais da produção.</p>
+            <br>
             <p> No entanto, a indústria da cana-de-açúcar no Brasil enfrenta desafios significativos, incluindo questões
                 ambientais relacionadas ao desmatamento e à conversão de terras, bem como preocupações com o trabalho e
                 condições de trabalho nas plantações. Esforços estão em andamento para promover práticas agrícolas
@@ -110,8 +112,8 @@
                 e proteger ecossistemas frágeis.</p>
         </div>
         <img src="https://cptstatic.s3.amazonaws.com/imagens/enviadas/materias/materia29421/cana-de-acucar-cpt.jpg"
-        alt="album-crybaby">
-        
+            alt="album-crybaby">
+
     </section>
 
 
