--- a/index.html
+++ b/index.html
@@ -52,12 +52,11 @@
                 a pausa para o café é um momento sagrado, seja em casa, no trabalho ou nos famosos cafés de esquina. O
                 famoso "cafezinho" é uma parte fundamental da rotina diária de milhões de brasileiros, e a forma de
                 prepará-lo varia de região para região, com métodos que vão desde o coador de pano até sofisticadas
-                máquinas de espresso.
+                máquinas de espresso.</p>
             <p> Além de seu impacto cultural, o café desempenha um papel crucial na economia brasileira, gerando
                 empregos diretos e indiretos e impulsionando o desenvolvimento de infraestrutura nas regiões produtoras.
                 A safra de café é um momento de grande expectativa e celebração, marcado pela colheita dos grãos maduros
                 e pela preparação para a exportação para mercados ao redor do mundo.</p>
-            </p>
         </div>
         <img class="cafe"
             src="https://st3.depositphotos.com/3566499/33564/i/450/depositphotos_335646854-stock-photo-coffee-farmer-picking-ripe-robusta.jpg"
@@ -73,15 +72,14 @@
                 exportações totais do país. A diversificação das cadeias produtivas relacionadas à soja, como a produção
                 de biocombustíveis e alimentos processados, também tem sido uma estratégia importante para agregar valor
                 aos produtos agrícolas brasileiros, fortalecendo a posição do Brasil como um player global no mercado de
-                commodities agrícolas.
-            </p>
+                commodities agrícolas.</p>
             <p> Ela ocupa uma posição de destaque na agricultura brasileira, representando não apenas uma importante
                 fonte de receita para o país, mas também um componente fundamental na segurança alimentar global. O
                 Brasil se estabeleceu como um dos maiores produtores e exportadores mundiais de soja, com vastas
                 extensões de terras dedicadas ao cultivo desse grão. Estados como Mato Grosso, Paraná e Rio Grande do
                 Sul lideram a produção nacional, aproveitando as condições climáticas favoráveis e a tecnologia agrícola
                 avançada para alcançar altos rendimentos por hectare.</p>
-            < <p> O crescimento do cultivo de soja no Brasil tem sido impulsionado pela demanda internacional,
+                <p> O crescimento do cultivo de soja no Brasil tem sido impulsionado pela demanda internacional,
                 especialmente da China, que é o maior importador mundial desse produto. A expansão contínua da fronteira
                 agrícola para áreas anteriormente cobertas por vegetação nativa, como a Amazônia e o Cerrado, levantou
                 preocupações ambientais e questões relacionadas à sustentabilidade. Esforços estão sendo feitos para
