--- a/index.html
+++ b/index.html
@@ -123,11 +123,11 @@
     <footer>
         <section id="equipe">
             <div class="divisao-equipe">
-                <img class="foto-equipe" src="./image copy 2.png" alt="Foto Filipe">
+                <img class="foto-equipe" src=".blob:https://web.whatsapp.com/bcac969c-d287-420a-8e38-59bb165c1d12" alt="Foto Filipe">
                 <h3 class="nome-equipe">Filipe Tomé</h3 class="nome-equipe">
             </div class="divisao-equipe">
             <div class="divisao-equipe">
-                <img class="foto-equipee" src="./image copy.png" alt="Laura Beatriz">
+                <img class="foto-equipee" src=".blob:https://web.whatsapp.com/95b8e0c8-5e34-40c4-be59-a841ec74d406" alt="Laura Beatriz">
                 <h3 class="nome-equipe">Laura Beatriz</h3 class="nome-equipe">
             </div class="divisao-equipe">
         </section>
