--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                 <h3 class="nome-equipe">Filipe Tomé</h3 class="nome-equipe">
             </div class="divisao-equipe">
             <div class="divisao-equipe">
-                <img class="foto-equipee" src=".https://cdn.pixabay.com/photo/2024/02/26/19/39/monochrome-image-8598798_640.jpg" alt="Laura Beatriz">
+                <img class="foto-equipee" src="https://cdn.pixabay.com/photo/2024/02/26/19/39/monochrome-image-8598798_640.jpg" alt="Laura Beatriz">
                 <h3 class="nome-equipe">Laura Beatriz</h3 class="nome-equipe">
             </div class="divisao-equipe">
         </section>
