--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     <footer>
         <section id="equipe">
             <div class="divisao-equipe">
-                <img class="foto-equipe" src=".blob:https://web.whatsapp.com/bcac969c-d287-420a-8e38-59bb165c1d12" alt="Foto Filipe">
+                <img class="foto-equipe" src="blob:https://web.whatsapp.com/bcac969c-d287-420a-8e38-59bb165c1d12" alt="Foto Filipe">
                 <h3 class="nome-equipe">Filipe Tomé</h3 class="nome-equipe">
             </div class="divisao-equipe">
             <div class="divisao-equipe">
