--- a/index.html
+++ b/index.html
@@ -123,11 +123,11 @@
     <footer>
         <section id="equipe">
             <div class="divisao-equipe">
-                <img class="foto-equipe" src="blob:https://web.whatsapp.com/bcac969c-d287-420a-8e38-59bb165c1d12" alt="Foto Filipe">
+                <img class="foto-equipe" src="28d6d629-e778-4670-b54d-e696b6553c32 (1).jpg" alt="Foto Filipe">
                 <h3 class="nome-equipe">Filipe Tomé</h3 class="nome-equipe">
             </div class="divisao-equipe">
             <div class="divisao-equipe">
-                <img class="foto-equipee" src="https://cdn.pixabay.com/photo/2024/02/26/19/39/monochrome-image-8598798_640.jpg" alt="Laura Beatriz">
+                <img class="foto-equipee" src="b7783824-fde3-4f60-80c2-a2fe7ec54bb4.jpg" alt="Laura Beatriz">
                 <h3 class="nome-equipe">Laura Beatriz</h3 class="nome-equipe">
             </div class="divisao-equipe">
         </section>
