--- a/index.html
+++ b/index.html
@@ -18,11 +18,9 @@
     <header class="cabecalho" id="nome">
         <h1>AgroWeb</h1>
         <a href="#equipe">Sobre nós</a>
-        <p>Sugestões</p>
     </header>
 
 
-    <div>
         <section class="apresentacao" id="inicio">
             <h3>Bem-vindo ao AgroWeb! Seu site que apresenta assuntos, notícias e curiosidades sobre o mundo da
                 agronomia no brasil!
@@ -34,7 +32,6 @@
             <img class="apresentacao-imagemII" src="https://www.udc.edu.br/web/images/cursos/agronomia.jpg"
                 alt="outro gato">
         </section>
-    </div>
 
     <section class="produtos" id="textos">
         <div class="cafe">
@@ -120,8 +117,7 @@
 
 
 
-    <footer>
-        <section id="equipe">
+    <footer> id="equipe">
             <div class="divisao-equipe">
                 <img class="foto-equipe" src="28d6d629-e778-4670-b54d-e696b6553c32 (1).jpg" alt="Foto Filipe">
                 <h3 class="nome-equipe">Filipe Tomé</h3 class="nome-equipe">
@@ -130,7 +126,6 @@
                 <img class="foto-equipee" src="b7783824-fde3-4f60-80c2-a2fe7ec54bb4.jpg" alt="Laura Beatriz">
                 <h3 class="nome-equipe">Laura Beatriz</h3 class="nome-equipe">
             </div class="divisao-equipe">
-        </section>
         <p>Siga nossas redes sociais:</p>
         <a href="https://www.instagram.com/lipeh._lp?igsh=YzA2eXp1c3U2MHh0&utm_source=qr">Instagram Filipe</a>
         <a href="https://www.instagram.com/041_lauh?igsh=cTV1eGlvM3YweWhp">Instagram Laura</a>
