--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
 
 
-    <footer> id="equipe">
+    <footer id="equipe">
             <div class="divisao-equipe">
                 <img class="foto-equipe" src="28d6d629-e778-4670-b54d-e696b6553c32 (1).jpg" alt="Foto Filipe">
                 <h3 class="nome-equipe">Filipe Tomé</h3 class="nome-equipe">
@@ -128,9 +128,8 @@
             </div class="divisao-equipe">
         </footer>
         <p>Siga nossas redes sociais:</p>
-        <a href="https://www.instagram.com/lipeh._lp?igsh=YzA2eXp1c3U2MHh0&utm_source=qr">Instagram Filipe</a>
-        <a href="https://www.instagram.com/041_lauh?igsh=cTV1eGlvM3YweWhp">Instagram Laura</a>
-
+        <button><a href="https://www.instagram.com/lipeh._lp?igsh=YzA2eXp1c3U2MHh0&utm_source=qr">Instagram Filipe</a>
+            <a href="https://www.instagram.com/041_lauh?igsh=cTV1eGlvM3YweWhp">Instagram Laura</a></button>
 </body>
 
 </html>
