--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 sustentáveis, como o cultivo da cana sem queima prévia da palha, visando reduzir as emissões de carbono
                 e proteger ecossistemas frágeis.</p>
         </div>
-        <img src="https://cptstatic.s3.amazonaws.com/imagens/enviadas/materias/materia29421/cana-de-acucar-cpt.jpg"
+        <img class="cana" src="https://cptstatic.s3.amazonaws.com/imagens/enviadas/materias/materia29421/cana-de-acucar-cpt.jpg"
             alt="album-crybaby">
 
     </section>
